[package]
name = "rusty-arp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
[profile.release.package.wry]
debug = true
debug-assertions = true

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pnet = "0.34.0"
ipnetwork = "0.20.0"
rand = "0.8.5"
futures = "0.3.30"
printpdf = "0.7.0"
nix = { version = "0.27.1", features = ["default", "user", "fs"] }
tauri-plugin-dialog = "2.0.0-beta"
log = "0.4"
env_logger = "0.10"
